css/index.css
@media ( max-width : 1450px) {
	.header-button {
		height: 60px;
	}
	.grad {
		height: 60px
	}
	.title-button {
		height: 100%;
	}
	.pmr-logo {
		top: 50%;
		transform: translateY(25%);
	}
}

@media ( min-width : 1450px ) and (max-width : 1641px) {
	.header-button {
		height: 60px;
	}
	.grad {
		height: 60px
	}
	.title-button {
		height: 100%;
	}
	.pmr-logo {
		top: 50%;
		transform: translateY(25%);
	}
}

.header-row {
	list-style-type: none;
	margin: 0;
	padding: 0;
	overflow: hidden;
}

.button-right {
	float: right;
}

.button-left {
	float: left;
}

.header-button a {
	display: block;
	color: white;
	text-align: center;
	padding: 14px 25px;
	text-decoration: none;
}

/* cChange the link color to #111 (black) on hover */
.header-button a:hover {
	color: white;
	background-color: #2e5daa;
	text-decoration: none;
}

.header-button a:focus {
	background-color: #4286f4;
	text-decoration: none;
	color: white;
}

.title-button a {
	display: block;
	color: white;
	text-align: center;
	padding: 14px 25px;
	text-decoration: none;
}

/* Change the link color to #111 (black) on hover */
.title-button a:hover {
	color: white;
	background-color: #2e5daa;
	text-decoration: none;
}

.title-button a:focus {
	background-color: #4286f4;
	text-decoration: none;
	color: white;
}

li a {
	display: block;
	color: white;
	text-align: center;
	padding: 14px 25px;
	text-decoration: none;
}

/* Change the link color to #111 (black) on hover */
li a:hover {
	color: white;
	background-color: #2e5daa;
	text-decoration: none;
}

li a:focus {
	background-color: #4286f4;
	text-decoration: none;
	color: white;
}

html,body {
	max-width: 100%;
	overflow-x: hidden;
	padding: 0;
	margin: 0;
	height: 100%;
}

.footer {
	position: absolute;
	bottom: 0;
	width: 100%;
	background-color: #727475;
}

.footer a:hover {
	color: white;
	text-decoration: none;
	background-color: #525454;
}

.footer a:focus {
	background-color: #727475;
	text-decoration: none;
	color: white;
}

.bubble {
	position: relative;
	width: 250px;
	height: 120px;
	padding: 0px;
	background: #b2b8c1;
	-webkit-border-radius: 10px;
	-moz-border-radius: 10px;
	border-radius: 10px;
}

.bubble:after {
	content: '';
	position: absolute;
	border-style: solid;
	border-width: 0 15px 15px;
	border-color: #b2b8c1 transparent;
	display: block;
	width: 0;
	z-index: 1;
	top: -15px;
	left: 110px;
}

.w3-display-left {
	position: absolute;
	top: 50%;
	left: 2%;
	transform: translate(0%, -50%);
}

.w3-display-right {
	position: absolute;
	top: 50%;
	right: 2%;
	transform: translate(0%, -50%);
}

.w3-btn-floating {
	width: 40px;
	height: 40px;
	line-height: 40px;
	transition: background-color .25s, color .15s, box-shadow .15s, opacity
		.25s, filter .25s, border .15s;
	display: inline-block;
	text-align: center;
	color: #fff;
	background-color: #000;
	overflow: hidden;
	z-index: 1;
	padding: 0;
	border-radius: 50%;
	cursor: pointer;
	font-size: 24px;
	text-decoration: none;
}

.w3-btn-floating:hover {
	text-decoration: none;
}

.slide-content {
	text-align: center;
	font-size: 20px;
}

.grad {
	background: red; /* For browsers that do not support gradients */
	background: -webkit-linear-gradient(left, #fff, #4286f4);
	/* For Safari 5.1 to 6.0 */
	background: -o-linear-gradient(right, #fff, #4286f4);
	/* For Opera 11.1 to 12.0 */
	background: -moz-linear-gradient(right, #fff, #4286f4);
	/* For Firefox 3.6 to 15 */
	background: linear-gradient(to right, #fff, #4286f4);
	/* Standard syntax */
}

.triangle-border {
	position: relative;
	padding: 11px;
	/* 	margin: 1em 0 3em;
 */
	border: 3px solid black;
	color: #333;
	background: #fff;
	-webkit-border-radius: 10px;
	-moz-border-radius: 10px;
	border-radius: 10px;
	font-size:14px;
	margin-top:40px;
}

.triangle-border:before {
	content: "";
	position: absolute;
	bottom: -20px;
	left: 40px;
	border-width: 20px 20px 0;
	border-style: solid;
	border-color: black transparent;
	display: block;
	width: 0;
}

.triangle-border:after {
	content: "";
	position: absolute;
	bottom: -13px;
	left: 47px;
	border-width: 13px 13px 0;
	border-style: solid;
	border-color: #fff transparent;
	display: block;
	width: 0;
}

